Tidied HTML/CSS.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div id="wrapper">
-            <header id="header" class="clear-fix">
+            <header id="header" class="clearfix">
                 <nav id="nav">
                     <ul>
                         <li>
