--- a/src/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/AppBundle/Resources/views/Default/index.html.twig
@@ -6,85 +6,84 @@
 {% endblock %}
 
 {% block body %}
+    <p>I am a self taught developer having started out with the C programming language nearly 15 years ago. Since then I have developed skills for a wide range of technical expertise. These include becoming an adept programmer in languages such as C, C++, Java, Python and web-based technologies including PHP and SQL (MySQL, PostgreSQL, SQL Server).</p>
+    <p>In 2009 I graduated from <a href="http://www.shef.ac.uk/" target="_blank">The University of Sheffield</a> where I studied for a BSc in <em>Computer Science &amp; Mathematics</em> and attained a 2.1 classification with honours. Here is a list of the topics which I took particular interest in:</p>
 
-<p>I am a self taught developer having started out with the C programming language nearly 15 years ago. Since then I have developed skills for a wide range of technical expertise. These include becoming an adept programmer in languages such as C, C++, Java, Python and web-based technologies including PHP and SQL (MySQL, PostgreSQL, SQL Server).</p>
-<p>In 2009 I graduated from <a href="http://www.shef.ac.uk/" target="_blank">The University of Sheffield</a> where I studied for a BSc in <em>Computer Science &amp; Mathematics</em> and attained a 2.1 classification with honours. Here is a list of the topics which I took particular interest in:</p>
+    <div id="topics" class="clearfix">
+        <ul class="major">
+            <li>
+                Systems analysis &amp; design
+                <ul>
+                    <li><a href="http://staffwww.dcs.shef.ac.uk/people/A.Simons/discovery/" target="_blank">The Discovery Method for OO</a></li>
+                </ul>
+            </li>
+            <li>
+                Robotics
+                <ul>
+                    <li>Old versus Nouvelle AI</li>
+                    <li>The Subsumption Architecture</li>
+                </ul>
+            </li>
+            <li>
+                Functional programming
+                <ul>
+                    <li>Haskell language</li>
+                    <li>Recursion theory</li>
+                </ul>
+            </li>
+            <li>
+                Web semantics
+                <ul>
+                    <li>Web 2.0 specification</li>
+                    <li>Knowledge representation</li>
+                </ul>
+            </li>
+            <li>
+                Database technology
+                <ul>
+                    <li>Normalisation</li>
+                    <li>Query languages</li>
+                </ul>
+            </li>
+            <li>
+                Pattern/text processing
+                <ul>
+                    <li>Python scripting</li>
+                    <li>Perl scripting</li>
+                </ul>
+            </li>
+        </ul>
 
-<div id="topics" class="clear-fix">
-  <ul class="major">
-    <li>
-      Systems analysis &amp; design
-      <ul>
-        <li><a href="http://staffwww.dcs.shef.ac.uk/people/A.Simons/discovery/" target="_blank">The Discovery Method for OO</a></li>
-      </ul>
-    </li>
-    <li>
-      Robotics
-      <ul>
-        <li>Old versus Nouvelle AI</li>
-        <li>The Subsumption Architecture</li>
-      </ul>
-    </li>
-    <li>
-      Functional programming
-      <ul>
-        <li>Haskell language</li>
-        <li>Recursion theory</li>
-      </ul>
-    </li>
-    <li>
-      Web semantics
-      <ul>
-        <li>Web 2.0 specification</li>
-        <li>Knowledge representation</li>
-      </ul>
-    </li>
-    <li>
-      Database technology
-      <ul>
-        <li>Normalisation</li>
-        <li>Query languages</li>
-      </ul>
-    </li>
-    <li>
-      Pattern/text processing
-      <ul>
-        <li>Python scripting</li>
-        <li>Perl scripting</li>
-      </ul>
-    </li>
-  </ul>
+        <ul class="major">
+            <li>
+                Topics in number theory
+                <ul>
+                    <li>Linear/quadratic congruency</li>
+                    <li>Properties of prime numbers</li>
+                    <li>The work of <em>Pierre de Fermat</em></li>
+                </ul>
+            </li>
+            <li>
+                Linear albegra
+                <ul>
+                    <li>Matrix theory</li>
+                    <li>Vector spaces</li>
+                </ul>
+            </li>
+            <li>
+                Abstract algebra
+                <ul>
+                    <li>Rings, groups and fields</li>
+                </ul>
+            </li>
+            <li>Advanced calculus</li>
+            <li>Fourier theory</li>
+            <li>Chaos &amp; fractals</li>
+            <li>Knots &amp; surfaces</li>
+        </ul>
+    </div>
 
-  <ul class="major">
-    <li>
-      Topics in number theory
-      <ul>
-        <li>Linear/quadratic congruency</li>
-        <li>Properties of prime numbers</li>
-        <li>The work of <em>Pierre de Fermat</em></li>
-      </ul>
-    </li>
-    <li>
-      Linear albegra
-      <ul>
-        <li>Matrix theory</li>
-        <li>Vector spaces</li>
-      </ul>
-    </li>
-    <li>
-      Abstract algebra
-      <ul>
-        <li>Rings, groups and fields</li>
-      </ul>
-    </li>
-    <li>Advanced calculus</li>
-    <li>Fourier theory</li>
-    <li>Chaos &amp; fractals</li>
-    <li>Knots &amp; surfaces</li>
-  </ul>
-</div>
-
-<p>Having studied mathematics at university together with the diverse range of skills mentioned above, I believe I can be of value to any workforce who is looking for a flexible software engineer.</p>
-<p>My C.V. can be viewed in the following formats: <a href="cv/cv.doc">.doc</a> <a href="cv/cv.pdf" target="new">.pdf</a></p>
+    <p>Having studied mathematics at university together with the diverse range of skills mentioned above, I believe I can be of value to any workforce who is looking for a flexible software engineer.</p>
+    <p>My C.V. can be viewed in the following formats: <a href="cv/cv.doc">.doc</a> <a href="cv/cv.pdf" target="new">.pdf</a></p>
 
 {% endblock %}
