--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,10 +12,10 @@
             <header id="header" class="clearfix">
                 <nav id="nav">
                     <ul>
-                        <li>
+                        <li class="{% if app.request.attributes.get('_route') == 'home' %}is-active{% endif %}">
                             <a href="{{ path('home') }}">Home</a>
                         </li>
-                        <li>
+                        <li class="{% if app.request.attributes.get('_route') == 'contact' %}is-active{% endif %}">
                             <a href="{{ path('contact') }}">Contact</a>
                         </li>
                     </ul>
