--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}home{% endblock %} - tomcant</title>
+        <title>{% block title %}{% endblock %} - tomcant</title>
         {% block stylesheets %}
             <link href="{{ asset('bundles/app/css/main.css') }}" type="text/css" rel="stylesheet" />
         {% endblock %}
