--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -186,20 +186,12 @@ a:active {
 /**
  * Contact =====================================================================
  */
-form {
-  width: 500px;
-  margin: 0 auto;
-}
-
-fieldset {
-  border: none;
-}
-
 label {
   line-height: 25px;
 }
 
 input[type=text],
+input[type=email],
 textarea {
   width: 100%;
   padding: 5px;
@@ -213,7 +205,7 @@ textarea {
   height: 100px;
 }
 
-input[type=submit] {
+button {
   padding: 3px 5px;
 }
 
@@ -223,10 +215,4 @@ fieldset.buttons {
 
 div.form-item {
   margin: 10px 0;
-}
-
-.error-element {
-  border: 1px solid #f00;
-  background-color: #fff0f0;
-  padding: 3px !important;
 }
