Added one very basic media query for implementing a responsive design.

--- a/src/AppBundle/Resources/public/css/main.css
+++ b/src/AppBundle/Resources/public/css/main.css
@@ -44,8 +44,14 @@ a:active {
 
 /* Layout */
 #wrapper {
-  width: 800px;
-  margin: 0 auto;
+  margin: 0 5%;
+}
+
+@media (min-width: 900px) {
+  #wrapper {
+    width: 800px;
+    margin: 0 auto;
+  }
 }
 
 #header {
