--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
         <title>{% block title %}{% endblock %} - tomcant</title>
         {% block stylesheets %}
-            <link href="{{ asset('bundles/app/css/main.css') }}" type="text/css" rel="stylesheet" />
+            <link href="{{ asset('bundles/app/css/main.css') }}" type="text/css" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
