--- a/app/src/AppBundle/Resources/views/default/index.html.twig
+++ b/app/src/AppBundle/Resources/views/default/index.html.twig
@@ -3,5 +3,5 @@
 {% block title %}home{% endblock %}
 
 {% block body %}
-    <p>One day I might find the time to put something useful here. Until then, my C.V. can be viewed in the following formats: <a href="cv/cv.doc">.doc</a> <a href="cv/cv.pdf" target="new">.pdf</a></p>
+    <p>One day I will make time to put something useful here. Until then, my C.V. can be viewed in the following formats: <a href="cv/cv.doc">.doc</a> <a href="cv/cv.pdf" target="new">.pdf</a></p>
 {% endblock %}
